tests/purs/failing/2109-discard.purs
-- @shouldFailWith UnknownName
module Main where

import Prelude (unit, pure)

main = do
  pure unit
  pure unit
